crates/ruff_python_parser/tests/snapshots/valid_syntax@unparenthesized_named_expr_index_py39.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/ok/unparenthesized_named_expr_index_py39.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..53,
        body: Suite {
            range: 0..53,
            node_index: NodeIndex(None),
            statements: [
                Expr(
                    StmtExpr {
                        node_index: NodeIndex(None),
                        range: 43..52,
                        value: Subscript(
                            ExprSubscript {
                                node_index: NodeIndex(None),
                                range: 43..52,
                                value: Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 43..46,
                                        id: Name("lst"),
                                        ctx: Load,
                                    },
                                ),
                                slice: Named(
                                    ExprNamed {
                                        node_index: NodeIndex(None),
                                        range: 47..51,
                                        target: Name(
                                            ExprName {
                                                node_index: NodeIndex(None),
                                                range: 47..48,
                                                id: Name("x"),
                                                ctx: Store,
                                            },
                                        ),
                                        value: NumberLiteral(
                                            ExprNumberLiteral {
                                                node_index: NodeIndex(None),
                                                range: 50..51,
                                                value: Int(
                                                    1,
                                                ),
                                            },
                                        ),
                                    },
                                ),
                                ctx: Load,
                            },
                        ),
                    },
                ),
            ],
        },
    },
)
```
