crates/ruff_python_parser/tests/snapshots/valid_syntax@unparenthesized_named_expr_py310.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/ok/unparenthesized_named_expr_py310.py
---
## AST

```
Module(
    ModModule {
        range: 0..89,
        body: [
            Expr(
                StmtExpr {
                    range: 44..58,
                    value: Set(
                        ExprSet {
                            range: 44..58,
                            elts: [
                                Named(
                                    ExprNamed {
                                        range: 45..51,
                                        target: Name(
                                            ExprName {
                                                range: 45..46,
                                                id: Name("x"),
                                                ctx: Store,
                                            },
                                        ),
                                        value: NumberLiteral(
                                            ExprNumberLiteral {
                                                range: 50..51,
                                                value: Int(
                                                    1,
                                                ),
                                            },
                                        ),
                                    },
                                ),
                                NumberLiteral(
                                    ExprNumberLiteral {
                                        range: 53..54,
                                        value: Int(
                                            2,
                                        ),
                                    },
                                ),
                                NumberLiteral(
                                    ExprNumberLiteral {
                                        range: 56..57,
                                        value: Int(
                                            3,
                                        ),
                                    },
                                ),
                            ],
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    range: 59..88,
                    value: SetComp(
                        ExprSetComp {
                            range: 59..88,
                            elt: Named(
                                ExprNamed {
                                    range: 60..69,
                                    target: Name(
                                        ExprName {
                                            range: 60..64,
                                            id: Name("last"),
                                            ctx: Store,
                                        },
                                    ),
                                    value: Name(
                                        ExprName {
                                            range: 68..69,
                                            id: Name("x"),
                                            ctx: Load,
                                        },
                                    ),
                                },
                            ),
                            generators: [
                                Comprehension {
                                    range: 70..87,
                                    target: Name(
                                        ExprName {
                                            range: 74..75,
                                            id: Name("x"),
                                            ctx: Store,
                                        },
                                    ),
                                    iter: Call(
                                        ExprCall {
                                            range: 79..87,
                                            func: Name(
                                                ExprName {
                                                    range: 79..84,
                                                    id: Name("range"),
                                                    ctx: Load,
                                                },
                                            ),
                                            arguments: Arguments {
                                                range: 84..87,
                                                args: [
                                                    NumberLiteral(
                                                        ExprNumberLiteral {
                                                            range: 85..86,
                                                            value: Int(
                                                                3,
                                                            ),
                                                        },
                                                    ),
                                                ],
                                                keywords: [],
                                            },
                                        },
                                    ),
                                    ifs: [],
                                    is_async: false,
                                },
                            ],
                        },
                    ),
                },
            ),
        ],
    },
)
```
