crates/ruff_python_parser/tests/snapshots/valid_syntax@unparenthesized_walrus_index_py310.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/ok/unparenthesized_walrus_index_py310.py
---
## AST

```
Module(
    ModModule {
        range: 0..54,
        body: [
            Expr(
                StmtExpr {
                    range: 44..53,
                    value: Subscript(
                        ExprSubscript {
                            range: 44..53,
                            value: Name(
                                ExprName {
                                    range: 44..47,
                                    id: Name("lst"),
                                    ctx: Load,
                                },
                            ),
                            slice: Named(
                                ExprNamed {
                                    range: 48..52,
                                    target: Name(
                                        ExprName {
                                            range: 48..49,
                                            id: Name("x"),
                                            ctx: Store,
                                        },
                                    ),
                                    value: NumberLiteral(
                                        ExprNumberLiteral {
                                            range: 51..52,
                                            value: Int(
                                                1,
                                            ),
                                        },
                                    ),
                                },
                            ),
                            ctx: Load,
                        },
                    ),
                },
            ),
        ],
    },
)
```
